<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientesplash">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/txtLog"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:backgroundTint="@color/black"
                android:background="@drawable/layout_bg2"
                android:gravity="center"
                android:fontFamily="@font/allerta"
                android:text="@string/Blink"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="156dp"
                android:layout_height="168dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-6dp"
                android:layout_marginLeft="-6dp"
                android:layout_marginTop="-23dp"
                android:src="@drawable/mb" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="01dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/layout_bg2">


            <TextView
                android:id="@+id/tv_Registrate2"
                android:layout_width="229dp"
                android:layout_height="62dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="33dp"
                android:layout_marginEnd="143dp"
                android:layout_marginRight="143dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="@string/BtnIniciar"

                android:textColor="@color/darkgray"
                android:textSize="32dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_Crear"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_below="@+id/btnIniciarSecion"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"

                android:layout_marginStart="191dp"
                android:layout_marginLeft="191dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:text="@string/BtnCrear"
                android:textColor="@color/darkgray"
                android:textSize="16dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etusuarioIniciar"
                android:layout_width="371dp"
                android:layout_height="49dp"
                android:layout_below="@+id/tv_Registrate2"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="58dp"
                android:layout_marginEnd="22dp"
                android:layout_marginRight="22dp"
                android:background="@drawable/inputset"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/allerta"
                android:hint="@string/UsuarioInicio"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingLeft="12dp" />

            <EditText
                android:id="@+id/etContraIniciar"
                android:layout_width="367dp"
                android:layout_height="45dp"
                android:layout_below="@+id/etusuarioIniciar"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"

                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/inputset"
                android:drawableLeft="@drawable/ic_security"
                android:drawablePadding="12dp"
                android:ems="10"
                android:fontFamily="@font/allerta"
                android:hint="@string/ContraseniaInicio"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingLeft="12dp" />

            <Button
                android:id="@+id/btnIniciarSecion"
                android:layout_width="360dp"
                android:layout_height="52dp"
                android:layout_below="@+id/etContraIniciar"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="18dp"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="28dp"

                android:layout_marginEnd="18dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/layout_btn"
                android:backgroundTint="#1A71DC"
                android:fontFamily="@font/allerta"
                android:text="@string/BtnIniciar"
                android:textColor="@color/white"
                android:textSize="18dp" />

        </RelativeLayout>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>


